Corrections to english and more names of asp action and controller and folder

--- a/src/NiceStore.WebApp.MVC/Views/AdminProduct/Index.cshtml
+++ b/src/NiceStore.WebApp.MVC/Views/AdminProduct/Index.cshtml
@@ -62,10 +62,10 @@
 </style>
 <div class="container">
 
-    <h1>Administração de Produtos</h1>
+    <h1>Manage Products</h1>
     <hr />
     <div class="row">
-        <a asp-controller="AdminProdutss" asp-action="NewProduct" class="btn btn-success right">+ Adicionar Novo</a>
+        <a asp-controller="AdminProduct" asp-action="NewProduct" class="btn btn-success right">+ New Product</a>
     </div>
     <hr />
     <div class="row">
