--- a/src/NiceStore.WebApp.MVC/Views/AdminProduct/NewProduct.cshtml
+++ b/src/NiceStore.WebApp.MVC/Views/AdminProduct/NewProduct.cshtml
@@ -4,16 +4,16 @@
     ViewData["Title"] = "NewProduct";
 }
 
-<h1>Novo Produto</h1>
+<h1>New Product</h1>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="NovoProduto">
+        <form asp-action="NewProduct">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label class="control-label">Categoria</label>
+                <label class="control-label">Categories</label>
                 <select asp-for="CategoryId" class="form-control" asp-items="@(new SelectList(Model.Categories, "Id", "Name"))">
                     <option></option>
                 </select>
