--- a/src/NiceStore.WebApp.MVC/Views/DisplayProduct/ProductDetails.cshtml
+++ b/src/NiceStore.WebApp.MVC/Views/DisplayProduct/ProductDetails.cshtml
@@ -149,25 +149,30 @@
         <div class="col-xs-5" style="border:20px solid white">
             <h3>@Model.Name</h3>
 
-            <h6 class="title-price"><small>OFERTA</small></h6>
+            <h6 class="title-price"><small>SALE</small></h6>
             <h3 style="margin-top:0px;">@Model.Price.ToString("C")</h3>
 
             <p>Only @Model.StockQuantity in stock!</p>
             <p>@Model.Description</p>
 
-            <div class="section" style="padding-bottom:20px;">
-                <h6 class="title-attr"><small>Quantity</small></h6>
-                <div>
-                    <div class="btn-minus"><span style="font-size: 15px">-</span></div>
-                    <input style="font-size: 15px" type="text" value="1" />
-                    <div class="btn-plus"><span style="font-size: 15px">+</span></div>
+            <form method="post" asp-controller="Cart" asp-action="AddItem">
+                
+                <input type="hidden" id="Id" name="Id" value="@Model.Id"/>
+                <div class="section" style="padding-bottom:20px;">
+                    <h6 class="title-attr"><small>Quantity</small></h6>
+                    <div>
+                        <div class="btn-minus"><span style="font-size: 15px">-</span></div>
+                        <input style="font-size: 15px" type="text" value="1" />
+                        <div class="btn-plus"><span style="font-size: 15px">+</span></div>
+                    </div>
                 </div>
-            </div>
 
-            <!-- Botones de compra -->
-            <div class="section" style="padding-bottom:20px;">
-                <button class="btn btn-success"><span style="margin-right:20px" aria-hidden="true"></span> Buy now!</button>
-            </div>
+            
+                <div class="section" style="padding-bottom:20px;">
+                    <button class="btn btn-success"><span style="margin-right:20px" aria-hidden="true"></span> Buy now!</button>
+                </div>
+            </form>
+
         </div>
     </div>
 </div>
